# cksp-compiler

./: .gitignore  .gitmodules  1. Introduction.html  2. The CKSP Syntax.html  3. Adopted Features.html  4. Planned Features.html  404.html  5. Installation.html  6. VS Code Extension.html  AST.cpp  AST.h  ASTDesugar.cpp  ASTDesugar.h  ASTPrinter.cpp  ASTPrinter.h  ASTTypeCasting.cpp  ASTVisitor.h  CHANGELOG.md  CHANGELOG.txt  CMakeLists.txt  CMakeListsTemplate.txt  CommandLineOptions.cpp  CommandLineOptions.h  CompileError.cpp  CompileError.h  Compiler.cpp  Compiler.h  Feature Comparison.html  Features.md  FileHandler.h  LICENSE.md  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  PathHandler.cpp  PathHandler.h  Preprocessor.cpp  Preprocessor.h  README.md  (+29 more)
AST/: AST.cpp  AST.h  ASTBuildDataStructures.cpp  ASTBuildDataStructures.h  ASTCollectLowerings.cpp  ASTCollectLowerings.h  ASTDataStructures.cpp  ASTDataStructures.h  ASTDefinitionChecker.cpp  ASTDefinitionChecker.h  ASTDesugar.cpp  ASTDesugar.h  ASTDesugar1.cpp  ASTDesugar1.h  ASTDesugarStructs.cpp  ASTDesugarStructs.h  ASTFunctionInlining.cpp  ASTFunctionInlining.h  ASTHandler.h  ASTLowering.cpp  ASTLowering.h  ASTMacros.cpp  ASTMacros.h  ASTPrinter.cpp  ASTPrinter.h  ASTTypeCasting.cpp  ASTTypeCasting.h  ASTTypeCasting2.cpp  ASTTypeCasting2.h  ASTTypeChecking.cpp  ASTTypeChecking.h  ASTVariables.cpp  ASTVariables.h  ASTVisitor.cpp  ASTVisitor.h  DefinitionProvider.cpp  DefinitionProvider.h  Type.cpp  Type.h  TypeRegistry.cpp  (+3 more)
Builtins/: Readme.txt  engine_bool.txt  engine_constants.txt  engine_constants_integers.txt  engine_functions.txt  engine_fx_enums.txt  engine_helper_functions.txt  engine_variables.txt  engine_widgets.txt  help.txt
BuiltinsProcessing/: BuiltinsProcessor.cpp  BuiltinsProcessor.h  DefinitionProvider.cpp  DefinitionProvider.h
Desugaring/: ASTDesugaring.h  DesugarBinaryExpr.h  DesugarCompoundAssignment.h  DesugarDeclareAssign.h  DesugarDelete.h  DesugarFamily.h  DesugarFor.h  DesugarForEach.h  DesugarForEachStatement.h  DesugarForStatement.h  DesugarFormatString.h  DesugarFunctionCall.h  DesugarFunctionDef.h  DesugarMethodChain.h  DesugarNamespace.h  DesugarParamList.h  DesugarSingleAssign.h  DesugarSingleAssignment.h  DesugarSingleDeclaration.h  DesugarStruct.h  DesugarUIControlArray.h  DesugaringConst.h  DesugaringFamily.h  DesugaringFamilyStruct.h
Documentation/: Compiler_Doc.md  Struktur.md  TODO.md  bachelor.md  bachelor_to_pdf.sh  cksp-core.ebnf  cksp.ebnf  cksp_compiler_structure.drawio  export_bachelor.sh  global_scope_ex.cksp  global_scope_ex2.cksp  ksp.ebnf  measuring_search_perf.cksp  object-construct-1.cksp  out.txt  passes_documentation.md  recursive-data-structure.cksp  recursive-functions.md  recursive_datastructures.md  scopes.drawio
Extension/: 1.0 Language and Editor.html  1.1 Compiler Integration.html  1.2 Kontakt Integration.html  1.3 Settings and Troubleshooting.html
Generator/: ASTGenerator.cpp  ASTGenerator.h
Interpreter/: ConstantFolding.h  SimpleExprInterpreter.cpp  SimpleExprInterpreter.h
JSON/: JSONParser.cpp  JSONParser.h  JSONVisitor.cpp  JSONVisitor.h  NCKPTranslator.cpp  NCKPTranslator.h
Lowering/: ASTHandler.h  ASTLowering.h  LoweringAccessChain.h  LoweringArray.h  LoweringBoolean.h  LoweringBooleanExpression.h  LoweringComparisons.h  LoweringConst.h  LoweringConstStruct.h  LoweringDelete.h  LoweringFamilyStruct.h  LoweringFor.h  LoweringForEach.h  LoweringFunctionCall.h  LoweringFunctionDef.h  LoweringGetControl.h  LoweringInitializerList.h  LoweringList.h  LoweringMemAlloc.h  LoweringNDArray.h  LoweringNil.h  LoweringNumElements.h  LoweringPointer.h  LoweringRange.h  LoweringRetain.h  LoweringSearch.h  LoweringSingleDeclaration.h  LoweringSortSearch.h  LoweringStruct.h  LoweringTernaryOperator.h  LoweringUIControlArray.h  LoweringUseCount.h  LoweringVariableRef.h  LoweringWhile.h  NDArrayCopyFunction.h  NDArrayHandler.h  NDArrayLowering.h  PostLoweringNumElements.h  PreLoweringStruct.h  UIControlArrayHandler.h  (+1 more)
Optimization/: ArrayInitializationRaising.h  ConstExprPropagation.h  ConstExprValidator.h  ConstantDatabase.h  ConstantFolding.cpp  ConstantFolding.h  ConstantPromotion.h  ConstantPropagation.h  DeadCodeElimination.h  FreeVarCollector.h  FunctionCallHoisting.h  MemoryExhaustedNesting.h  NilValidator.h  ParameterMarking.h  PreConstantPropagation.h  ReferenceValidator.h  ScalarVarToArray.h  TokenCounter.h  VarExistsValidator.h  VariableCollector.h  VariablePruning.h
Parser/: Parser.cpp  Parser.h
Preprocessor/: ImportProcessor.cpp  ImportProcessor.h  PreAST.cpp  PreAST.h  PreASTCombine.cpp  PreASTCombine.h  PreASTDefines.cpp  PreASTDefines.h  PreASTDesugar.cpp  PreASTDesugar.h  PreASTIncrementer.cpp  PreASTIncrementer.h  PreASTPragma.cpp  PreASTPragma.h  PreASTVisitor.cpp  PreASTVisitor.h  Preprocessor.cpp  Preprocessor.h  PreprocessorAST.cpp  PreprocessorAST.h  PreprocessorBuiltins.cpp  PreprocessorBuiltins.h  PreprocessorConditions.cpp  PreprocessorConditions.h  PreprocessorDefine.cpp  PreprocessorDefine.h  PreprocessorImport.cpp  PreprocessorImport.h  PreprocessorIncrementer.cpp  PreprocessorIncrementer.h  PreprocessorMacros.cpp  PreprocessorMacros.h  PreprocessorParser.cpp  PreprocessorParser.h  PreprocessorPragma.cpp  PreprocessorPragma.h  SimpleExprInterpreter.cpp  SimpleExprInterpreter.h
Processor/: Processor.cpp  Processor.h
Syntax/: 2.0 Language Structure.html  2.0.1 Callbacks.html  2.1 Variables and Arrays.html  2.10 Import Statements.html  2.11 Namespaces.html  2.12 Pragma Directives.html  2.13 Extended Features.html  2.2 Literals and Expressions.html  2.3 Declarations.html  2.4 Assignments.html  2.5 Lexical Scope.html  2.6 Functions.html  2.7 Loops.html  2.8 Control Flow.html  2.9 Custom Data Structures.html
SyntaxChecks/: KSPConditions.h  KSPDeclarations.h  KSPPersistency.h
Tokenizer/: Tokenizer.cpp  Tokenizer.h  Tokens.h
_Deployed/: cksp
changelogs/: CHANGELOG-v0.0.9-alpha.4.md  CHANGELOG-v0.0.9-alpha.6.md  CHANGELOG-v0.0.9-alpha.7.md  CHANGELOG-v0.0.9-alpha.9.md  CHANGELOG-v0.1.0-alpha.1.md
cksp/: Compiler.h  CompilerConfig.h
(+462 files in other folders)
